[package]
name = "rawcmd"
description = "Command-line framework."
license = "MIT"
version = "0.3.0"
authors = ["Kristijan Sedlak <xpepermint@gmail.com>"]
edition = "2018"
documentation = "https://github.com/xpepermint/rawcmd"
homepage = "https://github.com/xpepermint/rawcmd"
repository = "https://github.com/xpepermint/rawcmd"
